--- a/package.json
+++ b/package.json
@@ -22,10 +22,22 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/"
+    ],
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "coveralls": "^3.0.7",
     "enzyme": "^3.10.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
