--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "axios": "^0.19.0",
+    "history": "^4.10.1",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
@@ -18,6 +19,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-toastify": "^5.4.0",
