--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,19 @@
         "react"
     ],
     "rules": {
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "react/prefer-stateless-function": 0
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        ],
+        "react/prefer-stateless-function": 0,
+        "quotes": [
+            "error",
+            "double"
+        ]
     }
 }
