--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "nyc": "^14.1.1",
-    "node-sass": "^4.13.0",
     "@sentry/browser": "^5.7.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
     "@storybook/addon-actions": "^5.2.5",
     "@storybook/addon-links": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
+    "axios": "^0.19.0",
+    "joi-browser": "^13.4.0",
+    "jwt-decode": "^2.2.0",
+    "node-sass": "^4.13.0",
+    "nyc": "^14.1.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,12 +61,17 @@
   "devDependencies": {
     "coveralls": "^3.0.7",
     "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "react-test-renderer": "^16.11.0"
+    "jest": "^24.9.0",
+    "jest-enzyme": "^7.1.2",
+    "moxios": "^0.4.0",
+    "react-test-renderer": "^16.11.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
