--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "jest-enzyme": "^7.1.2",
     "moxios": "^0.4.0",
     "react-test-renderer": "^16.11.0",
-    "redux-mock-store": "^1.5.3"
+    "redux-mock-store": "^1.5.3",
+    "sinon": "^7.5.0"
   }
 }
