--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
     "nyc": "^14.1.1",
+    "moxios": "^0.4.0",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
@@ -21,12 +23,14 @@
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-api-middleware": "^3.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage --watchAll=true",
+    "test": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "storybook": "start-storybook -p 9009 -s public",
