--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "draft-js": "^0.11.0",
+    "draftjs-to-html": "^0.8.4",
+    "react-draft-wysiwyg": "^1.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -76,6 +79,7 @@
     ]
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.17.0",
     "coveralls": "^3.0.7",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
