--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "axios": "^0.19.0",
+    "focus-trap-react": "^6.0.0",
     "history": "^4.10.1",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^2.2.0",
