--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "axios": "^0.19.0",
+    "draft-js": "^0.11.0",
+    "draftjs-to-html": "^0.8.4",
     "focus-trap-react": "^6.0.0",
     "history": "^4.10.1",
     "joi-browser": "^13.4.0",
@@ -26,6 +28,7 @@
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -35,10 +38,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "draft-js": "^0.11.0",
-    "draftjs-to-html": "^0.8.4",
-    "react-draft-wysiwyg": "^1.13.2"
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
