feature(view-delete-comments): Users should view and delete comment on travel request [Finishes  #168049955]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
         },
         "ecmaVersion": 2019,
         "sourceType": "module"
@@ -32,6 +32,7 @@
                 ]
             }
         ],
+        "react/jsx-fragments": ["enabled"],
         "react/prefer-stateless-function": 0,
         "quotes": [
             "error",
