--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.19.0",
     "draft-js": "^0.11.0",
     "draftjs-to-html": "^0.8.4",
+    "react-draft-wysiwyg": "^1.13.2",
     "focus-trap-react": "^6.0.0",
     "history": "^4.10.1",
+    "immutable": "^3.8.2",
     "joi-browser": "^13.4.0",
     "joi-password-complexity": "^3.1.0",
     "jwt-decode": "^2.2.0",
@@ -28,7 +30,6 @@
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-draft-wysiwyg": "^1.13.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -38,7 +39,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -99,5 +101,12 @@
     "react-test-renderer": "^16.11.0",
     "redux-mock-store": "^1.5.3",
     "sinon": "^7.5.0"
+  },
+  "quokka": {
+    "babel": {
+      "presets": [
+        "react-app"
+      ]
+    }
   }
 }
