--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "focus-trap-react": "^6.0.0",
     "history": "^4.10.1",
     "joi-browser": "^13.4.0",
+    "joi-password-complexity": "^3.1.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
