--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "axios": "^0.19.0",
     "draft-js": "^0.11.0",
     "draftjs-to-html": "^0.8.4",
-    "react-draft-wysiwyg": "^1.13.2",
     "focus-trap-react": "^6.0.0",
     "google-maps-react": "^2.0.2",
     "history": "^4.10.1",
@@ -31,6 +30,8 @@
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-draft-wysiwyg": "^1.13.2",
+    "react-rating": "^2.0.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -40,8 +41,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
