--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "moxios": "^0.4.0",
     "react-test-renderer": "^16.11.0",
     "redux-mock-store": "^1.5.3",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "socket.io-mock": "^1.2.3"
   },
   "quokka": {
     "babel": {
